Remove unused classes, optimize imports, add tests, and refactor for clarity the model and util packages