@@ -9,7 +9,6 @@
  */
 package org.karnak.backend.model.action;
 
-import java.util.ArrayList;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.dcm4che3.data.Attributes;
@@ -35,8 +34,6 @@ public class MultipleActions extends AbstractAction {
 
 	final ActionItem actionRemove;
 
-	final ActionItem actionKeep;
-
 	public MultipleActions(String symbol) {
 		super(symbol);
 		standardDICOM = AppConfig.getInstance().getStandardDICOM();
@@ -44,66 +41,47 @@ public class MultipleActions extends AbstractAction {
 		actionUID = new UID("U");
 		actionReplaceNull = new ReplaceNull("Z");
 		actionRemove = new Remove("X");
-		actionKeep = new Keep("K");
 	}
 
 	@Override
 	public void execute(Attributes dcm, int tag, HMAC hmac) {
 		String sopUID = MetadataDICOMObject.getValue(dcm, Tag.SOPClassUID);
 		String tagPath = MetadataDICOMObject.getTagPath(dcm, tag);
+		ActionItem action;
 		try {
 			List<ModuleAttribute> moduleAttributes = standardDICOM.getAttributesBySOP(sopUID, tagPath);
-			if (moduleAttributes.size() == 1) {
-				String currentType = moduleAttributes.get(0).getType();
-				ActionItem actionItem = chooseAction(sopUID, currentType);
-				actionItem.execute(dcm, tag, hmac);
-			}
-			else if (moduleAttributes.size() > 1) {
-				ActionItem action = multipleAttributes(sopUID, moduleAttributes);
-				action.execute(dcm, tag, hmac);
-			}
-			else {
-				ActionItem action = defaultAction();
-				action.execute(dcm, tag, hmac);
-				log.warn("Cannot find the attribute {} in the SOP {}.  The strictest action will be chosen ({}).",
-						tagPath, sopUID, symbol);
-			}
+			action = switch (moduleAttributes.size()) {
+				case 0 -> {
+					log.warn("Cannot find the attribute {} in the SOP {}. The strictest action will be chosen ({}).",
+							tagPath, sopUID, symbol);
+					yield defaultAction();
+				}
+				case 1 -> chooseAction(sopUID, moduleAttributes.getFirst().getType());
+				default -> multipleAttributes(sopUID, moduleAttributes);
+			};
 		}
-		catch (StandardDICOMException standardDICOMException) {
-			ActionItem action = defaultAction();
-			action.execute(dcm, tag, hmac);
+		catch (StandardDICOMException e) {
 			log.warn(
 					"Cannot execute the action {} with the SOP {} and the attribute {}. The strictest action will be chosen.",
-					symbol, sopUID, tagPath, standardDICOMException);
+					symbol, sopUID, tagPath, e);
+			action = defaultAction();
 		}
+		action.execute(dcm, tag, hmac);
 	}
 
 	private ActionItem multipleAttributes(String sopUID, List<ModuleAttribute> moduleAttributes) {
-		List<ModuleAttribute> mandatoryModuleAttributes = getMandatoryAttributes(sopUID, moduleAttributes);
-
-		if (mandatoryModuleAttributes.isEmpty()) {
-			String currentType = ModuleAttribute.getStrictedType(moduleAttributes);
-			return chooseAction(sopUID, currentType);
-		}
-
-		if (mandatoryModuleAttributes.size() == 1) {
-			String currentType = mandatoryModuleAttributes.get(0).getType();
-			return chooseAction(sopUID, currentType);
-		}
-
-		String currentType = ModuleAttribute.getStrictedType(mandatoryModuleAttributes);
+		List<ModuleAttribute> mandatory = getMandatoryAttributes(sopUID, moduleAttributes);
+		String currentType = mandatory.size() == 1 ? mandatory.getFirst().getType()
+				: ModuleAttribute.getStrictedType(mandatory.isEmpty() ? moduleAttributes : mandatory);
 		return chooseAction(sopUID, currentType);
 	}
 
 	private List<ModuleAttribute> getMandatoryAttributes(String sopUID, List<ModuleAttribute> moduleAttributes) {
-		List<ModuleAttribute> mandatoryModuleAttributes = new ArrayList<>();
-		moduleAttributes.forEach(attribute -> {
-			Module module = standardDICOM.getModuleByModuleID(sopUID, attribute.getModuleId()).orElse(null);
-			if (module != null && Module.moduleIsMandatory(module)) {
-				mandatoryModuleAttributes.add(attribute);
-			}
-		});
-		return mandatoryModuleAttributes;
+		return moduleAttributes.stream()
+			.filter(attribute -> standardDICOM.getModuleByModuleID(sopUID, attribute.getModuleId())
+				.filter(Module::moduleIsMandatory)
+				.isPresent())
+			.toList();
 	}
 
 	private ActionItem chooseAction(String sopUID, String currentType) {
@@ -126,49 +104,39 @@ public class MultipleActions extends AbstractAction {
 	}
 
 	private ActionItem dummyOrReplaceNull(String currentType) {
-		if (currentType.equals("1") || currentType.equals("1C")) {
-			return defaultDummyValue;
-		}
-		return actionReplaceNull;
+		return isType1(currentType) ? defaultDummyValue : actionReplaceNull;
 	}
 
 	private ActionItem dummyOrRemove(String currentType) {
-		if (currentType.equals("3")) {
-			return actionRemove;
-		}
-		return defaultDummyValue;
+		return currentType.equals("3") ? actionRemove : defaultDummyValue;
 	}
 
 	private ActionItem dummyOrReplaceNullOrRemove(String currentType) {
-		if (currentType.equals("1") || currentType.equals("1C")) {
+		if (isType1(currentType)) {
 			return defaultDummyValue;
 		}
-		if (currentType.equals("2") || currentType.equals("2C")) {
-			return actionReplaceNull;
-		}
-		return actionRemove;
+		return isType2(currentType) ? actionReplaceNull : actionRemove;
 	}
 
 	private ActionItem replaceNullOrRemove(String currentType) {
-		/*
-		 * TODO: throw exception ? if (currentType.equals("1") ||
-		 * currentType.equals("1C")) { throw new Exception(For the current SOP, the tag
-		 * must type 1. Impossible to execute and respect the standard); }
-		 */
-		if (currentType.equals("2") || currentType.equals("2C")) {
-			return actionReplaceNull;
-		}
-		return actionRemove;
+		// A type 1/1C tag should not reach X/Z; both branches null it out or drop it.
+		return isType2(currentType) ? actionReplaceNull : actionRemove;
 	}
 
 	private ActionItem uidReplaceNullOrRemove(String currentType) {
-		if (currentType.equals("1") || currentType.equals("1C")) {
+		if (isType1(currentType)) {
 			return actionUID;
 		}
-		if (currentType.equals("2") || currentType.equals("2C")) {
-			return actionReplaceNull;
-		}
-		return actionRemove;
+		return isType2(currentType) ? actionReplaceNull : actionRemove;
+	}
+
+	// Type 1/1C: required, non-empty. Type 2/2C: required, may be empty.
+	private static boolean isType1(String type) {
+		return type.equals("1") || type.equals("1C");
+	}
+
+	private static boolean isType2(String type) {
+		return type.equals("2") || type.equals("2C");
 	}
 
 }
